2005-04-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_clusterlist_gendersllnl.c
	(gendersllnl_clusterlist_init): Added genders indexing.

	* config/ac_gendersllnl.m4: Check for genders indexing.

	* src/libcommon/Makefile.am: Put libwrappers and libcommon back
	into just libcommon.

	* src/cerebrod/Makefile.am: Remove symbols exporting, force all
	modules to hae the symbols they require.
	
2005-04-01  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_clusterlist_genders.c
	(genders_clusterlist_node_in_cluster),
	src/cerebrod/cerebrod_clusterlist_gendersllnl.c
	(gendersllnl_clusterlist_get_nodename,
	gendersllnl_clusterlist_node_in_cluster): Use buffer instead of
	strdup for shortening the nodename.
	
2005-03-31  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/Makefile.am: modulelib dir based on module dir
	determined in autoconf.
	
2005-03-30  Albert Chu  <chu11@llnl.gov>

	* Minor code cleanup throughout

	* src/cerebrod/cerebrod_updown.c (cerebrod_updown_update_data):
	Fix race condition.

	* configure.ac, src/libcerebro/Makefile.am: Add library
	versioning.

	* src/libcerebro/cerebro.map: New file.

	* src/libcerebro/Makefile.am: Add symbol export map.

	* Globally rename hostname to nodename.  Rename 'node' variables
	to 'nodename' variables.
	
2005-03-29  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_error.h, src/cerebrod/cerebrod_error.c
	(cerebrod_err_init, cerebrod_err_get_flags,
	cerebrod_err_set_flags, cerebrod_err_output, cerebrod_err_exit):
	New functions.

	* src/cerebrod/: Globally use new err functions appropriately and
	various code cleanup.
	
2005-03-29  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.c (cerebrod_config_cleanup): Fix
	static modules bug.

	* src/cerebrod/cerebrod_config.c (_cerebrod_config_parse): Minor
	debugging fix.
	
	* src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_send_node_responses): New function.
	
	* src/libcerebro/cerebro_updown_protocol.h,
	src/cerebrod/cerebrod_updown.c